--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 </head>
 <body>
+  <button id="grid-size-btn">Change Size</button>
+
   <div id="grid-container">
 
   </div>
